[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprite/Particles/LightPart.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Player/PlayerSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sound/PlayerStep.wav" type="AudioStream" id=3]
[ext_resource path="res://Player/IntroWalk.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Character:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Character:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "enter"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Character:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Character:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 60, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[node name="IntroWalk" type="Node2D"]
script = ExtResource( 4 )

[node name="Character" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="Character"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" parent="Character" instance=ExtResource( 2 )]
position = Vector2( 0, 10 )
animation = "WalkUp"
frame = 1
playing = true

[node name="DashIndicator" parent="Character/AnimatedSprite" index="0"]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "enter"
anims/RESET = SubResource( 1 )
anims/enter = SubResource( 2 )

[node name="Step" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="StepTimer" type="Timer" parent="Step"]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Step/StepTimer" to="." method="_on_StepTimer_timeout"]

[editable path="Character/AnimatedSprite"]
